# RangeFiltering

./: .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  README.md  main.cpp  rebuild.sh  requirements.txt  test.sh
baseline/src/: BlindTrieWithBloomFilter.cpp  BloomFiltersEnsemble.cpp  BloomedSurfingTrie.cpp  CMakeLists.txt  CompactTrie.cpp  MultiPrefixBloomFilter.cpp  MultiPrefixQuotientFilter.cpp  PrefixBloomFilter.cpp  PrefixQuotientFilter.cpp  RestrainedSplashyTrie.cpp  RestrainedSurfingTrie.cpp  SplashyTrie.cpp  SurfingTrie.cpp  Trie.cpp
basic_filters/: CMakeLists.txt
basic_filters/include/: BloomFilter.h  QuotientFilter.h
basic_filters/src/: BloomFilter.cpp  CMakeLists.txt  QuotientFilter.cpp
basic_filters/test/: CMakeLists.txt  test_bloomFilter.cpp  test_quotientFilter.cpp
bench/: CMakeLists.txt  SuRFFacade.h  SuRFReal_bench.cpp  bench.cpp  bench.h  bench_A.cpp  integer_range_filtering_bench.cpp  integer_range_filtering_bench.h  integer_range_filtering_bench.py  prefixBF_bench.cpp  prefixBF_bench.h  prefixQF_bench.cpp  prefix_filtering_bench.cpp  prefix_filtering_bench.py  qf_bench.py  qf_n_vs_m.cpp  queryfilter.cpp  range_filtering_bench.cpp  range_filtering_bench.hpp  range_filtering_bench.py  range_filtering_bench_2.py  range_filtering_bench_3.py  range_filtering_bench_louds_time.py  range_filtering_bench_sparse_dense.py  range_filtering_bench_splash.py  range_filtering_bench_surf_prefix_type.py  run_prefix_filtering_bench.sh  surfingTrie_bench.cpp  surfing_trie.py  trie_prefix_filtering_bench.py
bench/integer-range-filtering-results/1e4/: multiple_normal_200.txt  multiple_normal_50.txt  multiple_normal_500.txt  multiple_uniform_200.txt  multiple_uniform_50.txt  multiple_uniform_500.txt  normal_200.txt  normal_50.txt  normal_500.txt  uniform_200.txt  uniform_50.txt  uniform_500.txt
bench/integer-range-filtering-results/1e4_new/: normal_200.txt  normal_50.txt  normal_500.txt  uniform_200.txt  uniform_50.txt  uniform_500.txt
bench/integer-range-filtering-results/200_from_1e4/: multiple_normal.txt  multiple_uniform.txt  normal.txt  uniform.txt
bench/range-filtering-results/100k/: last_letter_different_last_letter.txt  last_letter_different_random.txt  last_letter_different_similar.txt  normal_last_letter.txt  normal_random.txt  normal_similar.txt  powerlaw_last_letter.txt  powerlaw_random.txt  powerlaw_similar.txt  uniform_last_letter.txt  uniform_random.txt  uniform_similar.txt
bench/range-filtering-results/100k_10_15_3__2_100_rosetta/: last_letter_different_common_prefix.txt  last_letter_different_last_letter.txt  last_letter_different_random.txt  last_letter_different_similar.txt  normal_common_prefix.txt  normal_last_letter.txt  normal_random.txt  normal_similar.txt  powerlaw_common_prefix.txt  powerlaw_last_letter.txt  powerlaw_random.txt  powerlaw_similar.txt  uniform_common_prefix.txt  uniform_last_letter.txt  uniform_random.txt  uniform_similar.txt
bench/range-filtering-results/100k_2/: last_letter_different_last_letter.txt  last_letter_different_random.txt  last_letter_different_similar.txt  normal_last_letter.txt  normal_random.txt  normal_similar.txt  powerlaw_last_letter.txt  powerlaw_random.txt  powerlaw_similar.txt  uniform_last_letter.txt  uniform_random.txt  uniform_similar.txt
bench/range-filtering-results/100k_26_15_3__2-_50_bloomkrbf/: last_letter_different_last_letter.txt  normal_last_letter.txt  normal_random.txt  normal_similar.txt  powerlaw_common_prefix.txt  powerlaw_last_letter.txt  powerlaw_random.txt  uniform_common_prefix.txt  uniform_random.txt
bench/range-filtering-results/100k_26_15_3__20_50_bloomkrbf/: last_letter_different_common_prefix.txt  last_letter_different_random.txt  last_letter_different_similar.txt  normal_common_prefix.txt  powerlaw_similar.txt  uniform_last_letter.txt  uniform_similar.txt
bench/range-filtering-results/100k_26_15_3__20_50_layeredchareq/: last_letter_different_common_prefix.txt  last_letter_different_last_letter.txt  last_letter_different_random.txt  last_letter_different_similar.txt  normal_common_prefix.txt  normal_last_letter.txt  normal_random.txt  normal_similar.txt  powerlaw_common_prefix.txt  powerlaw_last_letter.txt  powerlaw_random.txt  powerlaw_similar.txt  uniform_common_prefix.txt  uniform_last_letter.txt  uniform_random.txt  uniform_similar.txt
bench/range-filtering-results/100k_26_15_3__20_50_new_chareq/: last_letter_different_common_prefix.txt  last_letter_different_last_letter.txt  last_letter_different_random.txt  last_letter_different_similar.txt  normal_common_prefix.txt  normal_last_letter.txt  normal_random.txt  normal_similar.txt  powerlaw_common_prefix.txt  powerlaw_last_letter.txt  powerlaw_random.txt  powerlaw_similar.txt  uniform_common_prefix.txt  uniform_last_letter.txt  uniform_random.txt  uniform_similar.txt
bench/range-filtering-results/100k_26_15_3__2_100__ch_5_all/: last_letter_different_common_prefix.txt  last_letter_different_last_letter.txt  last_letter_different_random.txt  last_letter_different_similar.txt  normal_common_prefix.txt  normal_last_letter.txt  normal_random.txt  normal_similar.txt  powerlaw_common_prefix.txt  powerlaw_last_letter.txt  powerlaw_random.txt  powerlaw_similar.txt  uniform_common_prefix.txt  uniform_last_letter.txt  uniform_random.txt  uniform_similar.txt
bench/range-filtering-results/100k_26_15_3__2_100_chareq/: normal_random.txt  (+19 more)
bench/results/: normal_last_letter_100k.txt  normal_random_100k.txt  powerlaw_random_100k.txt  prefixBF_datasetA_05.txt  uniform_last_letter_100k.txt  uniform_random_100k.txt
bench/results-vis/: visualise_results.ipynb
bench/workload-gen/: equal-length-set-generator.py  equalize.py  generate-integer-set.sh  generate-range-queries.sh  generate.sh  generator.py  integer-set-generator.py  range-queries-generator.py  requirements.txt  visualize_tree_tikz.py
range_filters/test/: CMakeLists.txt  test_bloomRangeFilter.cpp  test_krFingerprintGenerator.cpp  test_krFingerprintGeneratorNoEncoding.cpp  test_quotientTrie.cpp  test_rangeBFKR.cpp  test_rangeBFKRNoEncoding.cpp  test_reCHaREQ.cpp
(+2402 files in other folders)
