add_executable(bench bench.cpp)
add_executable(prefixBF_bench prefixBF_bench.cpp)
add_executable(prefixQF_bench prefixQF_bench.cpp)
add_executable(SuRFReal_bench SuRFReal_bench.cpp)
add_executable(bench_A bench_A.cpp)
add_executable(prefix_filtering_bench prefix_filtering_bench.cpp)
add_executable(queryfilter queryfilter.cpp)
add_executable(qf_n_vs_m qf_n_vs_m.cpp)
add_executable(surfingTrie_bench surfingTrie_bench.cpp)
add_executable(range_filtering_bench range_filtering_bench.cpp)

target_link_libraries(bench TRIE)
target_link_libraries(prefixBF_bench TRIE)
target_link_libraries(prefixQF_bench TRIE)
target_link_libraries(SuRFReal_bench TRIE)
target_link_libraries(bench_A TRIE)
target_link_libraries(prefix_filtering_bench TRIE)
target_link_libraries(queryfilter TRIE)
target_link_libraries(qf_n_vs_m TRIE)
target_link_libraries(surfingTrie_bench TRIE)
target_link_libraries(range_filtering_bench TRIE)

include_directories("../external/SuRF/include")